syntax = "proto2";

option java_package = "io.developerbuwan.demo.model";
option java_outer_classname = "DemoProtos";

message EventPayload {
    required string paidBy = 2;
    required double paidAmount = 3;
}

message PersonRequest {
    required string firstName = 1;
    required string lastName = 2;
    optional string middleName = 3;
}